Overflow auto no longer preventing typeahead dropdown from being visible

--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -110,14 +110,13 @@
 }
 
 .dropdown-menu {
-  z-index: 10000;
   border: none;
   margin: 0;
   .box-shadow(none);
-//  > li > a {
-//    font-size: 12px;
-//    font-weight: 300;
-//  }
+  > li > a {
+    font-size: 12px;
+    font-weight: 300;
+  }
 }
 
 .btn-group.open .dropdown-toggle {
