--- a/app/styles/less/widget-box.less
+++ b/app/styles/less/widget-box.less
@@ -58,7 +58,7 @@
   color: @gray-dark;
   font-size: @font-size-small;
   padding: 6px;
-  overflow-y: auto;
+  overflow-y: visible;
 //  max-height: 350px;
   .box-sizing(border-box);
   &.widget-tall {
